@@ -300,40 +300,6 @@ void CSuperComboBox::SetAutoComplete(INT nSource)
 			ASSERT(NULL != pWnd);
 			::SHAutoComplete(pWnd->m_hWnd, SHACF_FILESYSTEM);
 
-			/*
-			::CoCreateInstance(CLSID_AutoComplete, NULL, CLSCTX_INPROC_SERVER,
-				IID_IAutoComplete, (LPVOID*)&m_pAutoComplete);
-			
-			if (NULL != m_pAutoComplete)
-			{
-				IUnknown *punkSource;
-				::CoCreateInstance(CLSID_ACListISF, NULL, CLSCTX_INPROC_SERVER,
-					IID_IACList, (LPVOID*)&punkSource);
-				if (NULL != punkSource)
-				{
-					IACList2 *pal2;
-					if (SUCCEEDED(punkSource->QueryInterface(IID_IACList2, (LPVOID*)&pal2)))
-					{
-						pal2->SetOptions(ACLO_FILESYSONLY);
-						pal2->Release();
-						
-						IAutoComplete2 *pac2;
-						if (SUCCEEDED(m_pAutoComplete->QueryInterface(IID_IAutoComplete2, (LPVOID*)&pac2)))
-						{
-							pac2->SetOptions(ACO_AUTOSUGGEST);
-							pac2->Release();
-						}
-						m_pAutoComplete->Init(pWnd->m_hWnd, punkSource, NULL, NULL);
-					}
-					
-					punkSource->Release();
-					
-					m_pAutoComplete->Release();
-					m_pAutoComplete = NULL;
-				}
-			}
-			*/
-
 			break;
 		}
 
